<resources>
    <string name="app_name">Bancoalbeca</string>
    <string name="iniciar_sesion">Start session</string>
    <string name="introduce_el_usuario">User</string>
    <string name="introduce_password">Password</string>
    <string name="entrar">LOG IN</string>
    <string name="salir">EXIT</string>
    <string name="bienvenido">Welcome %1$s</string>
    <string name="bienvenida">Welcome to the Banco Valencia</string>
    <string name="cajeros">ATM</string>
    <string name="promociones">PROMOTIONS</string>
    <string name="cambiar_contrase_a">CHANGE PASSWORD</string>
    <string name="transferencias">TRANSFERS</string>
    <string name="movimientos">MOVEMENTS</string>
    <string name="posici_n_global">GLOBAL POSITION</string>
    <string name="obligatorio">Required</string>
    <string name="old_password">Old Password</string>
    <string name="actual_password">New Password</string>
    <string name="aceptar">ACCEPT</string>
    <string name="cuenta_propia">own account</string>
    <string name="elige_tu_cuenta">Choose your account</string>
    <string name="cuenta_ajen">Foreign account</string>
    <string name="escribe_numero_cuenta_ajena">Write number of foreign account</string>
    <string name="cantidad">Amount:</string>
    <string name="enviar_justificante">send bank statement</string>
    <string name="enviar">SEND</string>
    <string name="cancelar">CANCEL</string>
    <string name="selecciona_la_cuenta">Choose your account: </string>
    <string name="ltimos_movimientos">Últimos movimientos</string>
    <string name="cuentas">Accounts:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="detalle_del_movimiento">Movement detail</string>
    <string name="home">HOME</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="navigation_drawer_open">abierto</string>
    <string name="navigation_drawer_close">cerrado</string>
    <string name="todos">Todos</string>
    <string name="tipo_0">Tipo 0</string>
    <string name="tipo_1">Tipo 1</string>
    <string name="tipo_2">Tipo 2</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_atm">AtmActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>