<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_globalPosition"
            android:icon="@drawable/ic_global"
            android:title="@string/posici_n_global" />
        <item
            android:id="@+id/nav_movements"
            android:icon="@drawable/ic_movimientos"
            android:title="@string/movimientos" />
        <item
            android:id="@+id/nav_transfers"
            android:icon="@drawable/ic_transferencias"
            android:title="@string/transferencias" />
        <item
            android:id="@+id/nav_changePasword"
            android:icon="@drawable/ic_cambiar"
            android:title="@string/cambiar_contrase_a" />
        <item
            android:id="@+id/nav_promotions"
            android:icon="@drawable/ic_promociones"
            android:title="@string/promociones" />
        <item
            android:id="@+id/nav_cajeros"
            android:icon="@drawable/ic_cajero"
            android:title="@string/cajeros" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>