<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="16dp">
<TextView

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/movimientos"
    android:gravity="center"
    android:layout_marginTop="20dp"
    style="@style/titols"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecciona_la_cuenta"
        android:layout_marginTop="16dp"/>
    <Spinner
        android:id="@+id/sMovimientos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ltimos_movimientos"
        android:layout_marginTop="16dp"/>
<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recycler"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>


</LinearLayout>