<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
   >
    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/avatar"
                />
            <TextView
                android:id="@+id/text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text=""
                android:textSize="13pt"
                android:gravity="center"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/card1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/posicion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/posici_n_global"
                android:drawableStart="@drawable/ic_global"

                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/movimientos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/movimientos"
                android:drawableStart="@drawable/ic_movimientos"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/transferencia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/transferencias"
                android:drawableStart="@drawable/ic_transferencias"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cambiar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/cambiar_contrase_a"
                android:drawableStart="@drawable/ic_cambiar"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/promociones"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/promociones"
                android:drawableStart="@drawable/ic_promociones"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cajeros"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/cajeros"
                android:drawableStart="@drawable/ic_cajero"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/salir"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/salir"
                android:drawableStart="@drawable/ic_salir"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            app:navigationIcon="@drawable/ic_menu"

            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_banc"
            android:layout_gravity="center"
            app:layout_anchor="@id/bottomAppBar"
            tools:ignore="ContentDescription" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>